--- a/design-system/package.json
+++ b/design-system/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "microfrontend-1-app",
+  "name": "@microfrontend/core",
   "version": "0.1.0",
   "private": true,
+  "peerDependencies": {
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4"
+  },
+  
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.1",
-    "@types/react": "^17.0.9",
-    "@types/react-dom": "^17.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
     "web-vitals": "^1.0.1"
@@ -43,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "babel-loader": "^8.1.0",
-    "redux-devtools-extension": "^2.13.9"
+    "babel-loader": "^8.1.0"
   }
 }
