--- a/lib/design-system/package.json
+++ b/lib/design-system/package.json
@@ -9,14 +9,17 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4"
   },
-  
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.1",
     "react-scripts": "4.0.3",
+    "scss-loader": "0.0.1",
     "typescript": "^4.3.2",
     "web-vitals": "^1.0.1"
   },
